tests/baselines/reference/importNonExternalModule.errors.txt
error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
foo_1.ts(1,22): error TS2306: File 'foo_0.ts' is not a module.


!!! error TS5107: Option 'module=AMD' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
                         ~~~~~~~~~
!!! error TS2306: File 'foo_0.ts' is not a module.
    // Import should fail.  foo_0 not an external module
    if(foo.answer === 42){
    
    }
    
==== foo_0.ts (0 errors) ====
    namespace foo {
    	export var answer = 42;
    }
    